<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlayerX</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>

    <string name="total_videos">Total Videos</string>
    <string name="total_folders">Total Folders</string>

    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>

    <string name="loading">loading</string>
    <string name="semi_colon">:</string>

    <string name="lock">Lock Icon</string>
    <string name="back">Back Icon</string>
    <string name="menu">Menu</string>


</resources>