<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="2dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/video_img"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_video_player"
        app:shapeAppearanceOverlay="@style/curved"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:paddingHorizontal="2dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/video_name"
            android:text="@string/video_name"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/folder_name"
            android:maxLines="1"
            android:text="@string/folder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/duration"
        android:textColor="@color/black" />

</LinearLayout>